Added new design changes

--- a/Angular/src/index.html
+++ b/Angular/src/index.html
@@ -29,7 +29,7 @@
 	<script src="assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
 	<script src="assets/js/jquery.fancybox.js"></script>
 	<script src="assets/js/appear.js"></script>
-	<script src="assets/js/owl.js"></script>
+	<script src="./assets/js/owl.js"></script>
 	<script src="assets/js/wow.js"></script>
 	<!-- <script src="assets/js/parallax.min.js"></script> -->
 	<script src="assets/js/tilt.jquery.min.js"></script>
